--- a/Chart.yaml
+++ b/Chart.yaml
@@ -22,3 +22,5 @@ version: 0.0.1
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.0.1"
+
+icon: https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png
